# mask-rule-checker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sample_rules.txt  strict_rules.txt
docs/: IMPLEMENTATION.md  README.md  description_candidate_pairs.md  description_easymrc.md  description_format_conversion.md  description_main.md  description_parallel.md  description_sampling.md  description_type_a_violations.md  description_type_b_violations.md  description_types.md  description_width_check.md  読んでね.md
docs/study/: level1.md  level2.md  level3.md  level4.md  level5.md  level6.md  level7.md  level8.md  level9.md  test  test.cpp
src/: main.cpp
src/easymrc/: candidate_pairs.hpp  easymrc.hpp  format_conversion.hpp  parallel.hpp  sampling.hpp  type_a_violations.hpp  type_b_violations.hpp  types.hpp  width_check.hpp
test/: easymrc_test.cpp  generate_test_data.cpp  test_gdsii.cpp
